# trivia_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: b279dd2dc827_.py
app/: config.py  database.py  main.py
app/questions/: crud.py  endpoints.py  gateways.py  models.py  schemas.py
